--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,3 +1,11 @@
+<!--
+  ~ index.html
+  ~ This file was last modified at 2019-02-15 19:13 by Victor N. Skurikhin.
+  ~ $Id$
+  ~ This is free and unencumbered software released into the public domain.
+  ~ For more information, please refer to <http://unlicense.org>
+  -->
+
 <!DOCTYPE HTML>
 <html>
 <head>
@@ -7,6 +15,8 @@
     <script language="javascript">
         var rootURL = "http://localhost:8181/ServiceItDesk/rest/api/v1/groups"
     </script>
+<script src="//unpkg.com/swagger-ui-dist@3/swagger-ui-bundle.js"></script>
+<!-- `SwaggerUIBundle` is now available on the page -->
 </head>
 
 <body>
